# apertium-fao-isl

./: .gitattributes  Makefile.am  README  TODO  apertium-fo-is.fo-is.dix  apertium-fo-is.fo-is.rlx  apertium-fo-is.fo.dix  apertium-fo-is.is-fo.lex  apertium-fo-is.is-fo.rlx  apertium-fo-is.is-fo.t1x  configure.ac  modes.xml  regression-tests.sh
dev/: fo-is.from-en.scored  fo-is.from-en.scored.status  inconsistency.sh  interwiki.bidix.xml  is-en.nouns.txt  is-fo.via-english.txt
dev/bidix/: adjs.list  adjs.scored.list  adv.list  adv.scored.list  calc-levenshtein.py  noun.list  noun.scored.list  prep.list  prep.scored.list  rerun-scores.sh  vblex.list  vblex.scored.list
test/: isl-fao-regression-chunker-expected.txt  isl-fao-regression-disam-expected.txt  isl-fao-regression-generator-expected.txt  isl-fao-regression-generator-gold.txt  isl-fao-regression-input.txt  isl-fao-regression-morph-expected.txt  isl-fao-regression-pretransfer-expected.txt  tests.json
